@@ -64,8 +64,8 @@ struct _GtkIconThemeClass
  *   Cannot be used together with %GTK_ICON_LOOKUP_NO_SVG.
  * @GTK_ICON_LOOKUP_USE_BUILTIN: When passed to
  *   gtk_icon_theme_lookup_icon() includes builtin icons
- *   as well as files. For a builtin icon, gdk_icon_info_get_filename()
- *   returns %NULL and you need to call gdk_icon_info_get_builtin_pixbuf().
+ *   as well as files. For a builtin icon, gtk_icon_info_get_filename()
+ *   returns %NULL and you need to call gtk_icon_info_get_builtin_pixbuf().
  * 
  * Used to specify options for gtk_icon_theme_lookup_icon()
  **/
